// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopNav it shpuld support adding test Id 1`] = `
.c0.c0.c0.c0.c0 {
  height: 100vh;
  background-color: hsla(0,0%,100%,1);
}

.c1.c1.c1.c1.c1 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  z-index: 100;
  grid-template-columns: auto minmax(0,1fr) auto;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  height: 56px;
  width: 100%;
  top: 0px;
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 12px;
  width: 245px;
}

.c3.c3.c3.c3.c3 {
  text-align: center;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  padding-right: 0px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  position: relative;
  width: 100%;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  gap: 0px;
  left: -1px;
}

.c12.c12.c12.c12.c12 {
  margin: auto;
  height: 16px;
  border-left-color: hsla(211,20%,52%,0.18);
  border-left-style: solid;
}

.c14.c14.c14.c14.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  padding: 8px;
  margin-top: 2px;
  gap: 8px;
  background-color: hsla(210,40%,98%,1);
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c19.c19.c19.c19.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20.c20.c20.c20.c20 {
  background-color: hsla(0,0%,100%,1);
}

.c22.c22.c22.c22.c22 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c24.c24.c24.c24.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c13.c13.c13.c13.c13 {
  border-width: 0;
  border-left-style: solid;
  border-left-width: 1px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 16px;
}

.c25.c25.c25.c25.c25 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  border-radius: 4px;
  border: none;
  background: none;
}

.c11.c11.c11.c11.c11[aria-expanded="true"] {
  background-color: hsla(211,20%,52%,0.12);
}

.c11.c11.c11.c11.c11:hover {
  background-color: hsla(211,20%,52%,0.12);
}

.c9.c9.c9.c9.c9 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 4px 2px;
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  border-bottom-width: 0;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: 280ms cubic-bezier(0.3,0,0.2,1);
  transition: 280ms cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-property: background;
  transition-property: background;
}

.c10.c10.c10.c10.c10 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 2px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: hsla(212,39%,16%,1);
  pointer-events: none;
  opacity: 0;
  -webkit-transition: 280ms cubic-bezier(0.3,0,0.2,1);
  transition: 280ms cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-property: opacity;
  transition-property: opacity;
}

.c21.c21.c21.c21.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c23.c23.c23.c23.c23 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c23.c23.c23.c23.c23 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c15.c15.c15.c15.c15 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.12);
  border-color: hsla(214,28%,84%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c15.c15.c15.c15.c15:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c15.c15.c15.c15.c15:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c15.c15.c15.c15.c15:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c15.c15.c15.c15.c15 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c16.c16.c16.c16.c16 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c18.c18.c18.c18.c18 {
  opacity: 1;
}

@media screen and (min-width:768px) {
  .c1.c1.c1.c1.c1 {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 8px;
    padding-left: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c2.c2.c2.c2.c2 {
    width: 264px;
  }
}

@media screen and (min-width:768px) {
  .c4.c4.c4.c4.c4 {
    padding-right: 80px;
  }
}

@media screen and (min-width:320px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

<div>
  <div
    class="c0"
    data-blade-component="box"
  >
    <div
      class="c1"
      data-analytics-topnav="demo"
      data-blade-component="box"
      data-testid="demo"
    >
      <div
        class="c2"
        data-blade-component="box"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 116 24"
            width="116"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="logo"
            >
              <path
                d="M7.49374 6.48973L6.53128 10.0322L12.0402 6.46956L8.43726 19.9123L12.0964 19.9153L17.419 0.0598755"
                fill="#3395FF"
                id="Vector"
              />
              <path
                d="M1.56438 14.264L0.0488892 19.9153H7.54876L10.6176 8.41895L1.56438 14.264ZM27.6162 9.28853C27.4329 9.96989 27.0797 10.4704 26.5529 10.79C26.0274 11.109 25.2898 11.2691 24.3378 11.2691H21.3129L22.3749 7.30922H25.3998C26.3507 7.30922 27.0039 7.4681 27.3584 7.79198C27.7128 8.11585 27.7983 8.61083 27.6162 9.29525V9.28853ZM30.7481 9.2097C31.133 7.77976 30.9742 6.6798 30.2702 5.90983C29.5674 5.14597 28.3343 4.76099 26.5743 4.76099H19.8237L15.7599 19.9221H19.0396L20.6773 13.8112H22.8284C23.3111 13.8112 23.6912 13.8906 23.9687 14.0434C24.2467 14.2023 24.4099 14.4773 24.46 14.8745L25.0454 19.9221H28.5591L27.9896 15.2167C27.8735 14.1656 27.3926 13.5484 26.5474 13.3651C27.6248 13.0534 28.5274 12.534 29.2546 11.8129C29.9767 11.0971 30.4926 10.2 30.7481 9.21581V9.2097ZM38.7203 14.4956C38.4453 15.5222 38.0237 16.2983 37.4535 16.8422C36.8828 17.386 36.2008 17.6549 35.4052 17.6549C34.5949 17.6549 34.0455 17.3922 33.7552 16.8605C33.4643 16.3289 33.4546 15.5589 33.7247 14.5506C33.9948 13.5423 34.4256 12.754 35.0183 12.1857C35.6111 11.6174 36.3041 11.3332 37.0997 11.3332C37.8941 11.3332 38.438 11.6082 38.713 12.1539C38.9941 12.7021 39.0002 13.4861 38.7252 14.5066L38.7203 14.4956ZM40.1576 9.13026L39.7469 10.6641C39.5697 10.1141 39.2257 9.67412 38.7172 9.34414C38.2076 9.02026 37.577 8.85527 36.8247 8.85527C35.902 8.85527 35.0159 9.09359 34.1665 9.57024C33.3171 10.0469 32.5715 10.7191 31.936 11.5868C31.3005 12.4546 30.8361 13.4384 30.5366 14.5445C30.2433 15.6567 30.1822 16.6283 30.3594 17.4716C30.5427 18.321 30.9277 18.9688 31.5205 19.421C32.1193 19.8793 32.8832 20.1054 33.8182 20.1054C34.5611 20.1091 35.2957 19.9485 35.9692 19.6348C36.6351 19.3345 37.2274 18.8924 37.7047 18.3393L37.2769 19.9379H40.4485L43.3444 9.13576H40.1667L40.1576 9.13026ZM54.7412 9.13026H45.518L44.8733 11.5379H50.2399L43.1452 17.6671L42.539 19.9282H52.0597L52.7044 17.5205H46.9541L54.1576 11.2996L54.7412 9.13026ZM62.8595 14.4773C62.5741 15.5406 62.1506 16.3399 61.5914 16.8605C61.0323 17.386 60.3552 17.6488 59.5602 17.6488C57.898 17.6488 57.3517 16.5916 57.9188 14.4773C58.1999 13.4262 58.6252 12.6361 59.1935 12.1038C59.7619 11.5697 60.4505 11.3033 61.2602 11.3033C62.0546 11.3033 62.5912 11.5679 62.8674 12.1007C63.1436 12.6324 63.1412 13.425 62.8595 14.476V14.4773ZM64.7159 9.53663C63.9857 9.08198 63.0538 8.85466 61.9172 8.85466C60.7665 8.85466 59.7014 9.08076 58.7212 9.53296C57.7451 9.98234 56.8872 10.6531 56.2157 11.4921C55.5252 12.3415 55.0284 13.3376 54.7234 14.4742C54.424 15.6066 54.3873 16.6008 54.6196 17.452C54.8518 18.3014 55.3406 18.9553 56.0739 19.4075C56.8134 19.8634 57.7544 20.0901 58.9094 20.0901C60.046 20.0901 61.1032 19.8616 62.0748 19.4069C63.0464 18.9498 63.8775 18.3008 64.568 17.4453C65.2586 16.5935 65.7536 15.5998 66.0591 14.4632C66.3646 13.3266 66.4013 12.3342 66.1691 11.4811C65.9369 10.6317 65.4541 9.97783 64.7269 9.52257L64.7159 9.53663ZM76.0382 12.0158L76.8509 9.07648C76.5759 8.93593 76.2154 8.8626 75.7632 8.8626C75.036 8.8626 74.3393 9.04226 73.6671 9.40647C73.089 9.71568 72.5977 10.152 72.1822 10.6983L72.6038 9.11559L71.6829 9.11926H69.4219L66.507 19.9172H69.7232L71.2356 14.2726C71.4556 13.4519 71.8516 12.8059 72.423 12.3476C72.9913 11.8875 73.7001 11.6571 74.5557 11.6571C75.0812 11.6571 75.5701 11.7775 76.0345 12.0176L76.0382 12.0158ZM84.9869 14.5292C84.7119 15.5375 84.2964 16.3075 83.7281 16.8391C83.1598 17.3732 82.4753 17.6396 81.6809 17.6396C80.8865 17.6396 80.3426 17.3708 80.0554 16.833C79.7621 16.2922 79.756 15.5131 80.031 14.4889C80.306 13.4653 80.7276 12.6801 81.3082 12.1362C81.8887 11.588 82.5731 11.3143 83.3675 11.3143C84.1497 11.3143 84.6752 11.5954 84.9564 12.1637C85.2374 12.732 85.2436 13.5203 84.9735 14.5286L84.9869 14.5292ZM87.2223 9.55435C86.6264 9.0777 85.8656 8.83938 84.9429 8.83938C84.1344 8.83938 83.3639 9.02271 82.633 9.39302C81.9027 9.76273 81.31 10.2669 80.8547 10.9049L80.8657 10.8315L81.4053 9.11437H78.2643L77.4638 12.1026L77.4394 12.2065L74.1395 24.5162H77.3599L79.0221 18.3198C79.1871 18.871 79.5232 19.3036 80.0365 19.6165C80.5498 19.9282 81.1835 20.0828 81.937 20.0828C82.8719 20.0828 83.7641 19.8567 84.6105 19.4045C85.4599 18.951 86.1932 18.2984 86.8165 17.4551C87.4398 16.6118 87.9024 15.6341 88.1976 14.528C88.497 13.4201 88.5581 12.432 88.387 11.5673C88.2128 10.7014 87.8272 10.031 87.232 9.5568L87.2223 9.55435ZM97.9047 14.4852C97.6297 15.5057 97.208 16.2879 96.6397 16.8257C96.0714 17.3671 95.387 17.6366 94.5926 17.6366C93.7798 17.6366 93.2299 17.3738 92.9426 16.8422C92.6493 16.3105 92.6432 15.5406 92.9121 14.5323C93.181 13.524 93.61 12.7357 94.2027 12.1674C94.7955 11.599 95.489 11.3155 96.2847 11.3155C97.0791 11.3155 97.6169 11.5905 97.8979 12.1344C98.179 12.6801 98.1809 13.4641 97.9071 14.487L97.9047 14.4852ZM99.3407 9.11681L98.9295 10.6506C98.7523 10.0976 98.41 9.65763 97.9028 9.33069C97.3895 9.00437 96.7601 8.84182 96.0085 8.84182C95.0857 8.84182 94.1948 9.08015 93.3441 9.5568C92.4947 10.0334 91.7492 10.702 91.1137 11.5673C90.4781 12.4326 90.0137 13.4189 89.7143 14.5249C89.4179 15.6353 89.3598 16.6087 89.5371 17.4557C89.7161 18.299 90.1017 18.9504 90.6981 19.4051C91.2933 19.8573 92.0609 20.0858 92.9958 20.0858C93.7475 20.0858 94.4655 19.9294 95.1468 19.6153C95.8112 19.3135 96.4019 18.8709 96.878 18.3179L96.4503 19.9178H99.6218L102.517 9.11987H99.3456L99.3407 9.11681ZM115.832 9.12048L115.834 9.11742H113.885C113.822 9.11742 113.767 9.12048 113.71 9.1217H112.699L112.18 9.84278L112.051 10.0139L111.996 10.0994L107.887 15.8241L107.037 9.12048H103.671L105.376 19.3073L101.612 24.5199H104.967L105.878 23.2286C105.903 23.1908 105.926 23.159 105.957 23.1186L107.02 21.6093L107.051 21.5665L111.813 14.814L115.828 9.13087L115.834 9.1272H115.832V9.12048Z"
                fill="#192839"
                id="Vector_2"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="c4"
        data-blade-component="top-nav-content"
      >
        <nav
          class="c5"
          data-blade-component="tab-nav"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c7"
              data-blade-component="base-box"
            >
              <div
                class="c8"
                data-blade-component="box"
              >
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Home"
                    href="/home"
                    to="/home"
                  >
                    Home
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Payroll"
                    href="/payroll"
                    to="/payroll"
                  >
                    Payroll
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Payments"
                    href="/payments"
                    to="/payments"
                  >
                    Payments
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Magic Checkout"
                    href="/magic-checkout"
                    to="/magic-checkout"
                  >
                    Magic Checkout
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
              </div>
              <div
                class=" c9"
                data-blade-component="tab-nav-item"
              >
                <div
                  class=" c10"
                  data-blade-component="base-box"
                />
                <a
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="c11"
                  href="#"
                  id=":rn:"
                  to="#"
                >
                  More
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="16px"
                    viewBox="0 0 24 24"
                    width="16px"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                      data-blade-component="svg-path"
                      fill="hsla(212, 39%, 16%, 1)"
                      fill-rule="evenodd"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="c14"
        data-blade-component="top-nav-actions"
      >
        <button
          aria-label="View Ecosystem Health"
          class="c15"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c16"
            data-blade-component="base-box"
          >
            <div
              class="c17 c18"
              data-blade-component="base-box"
            >
              <div
                class="c19"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 1C9.43043 1 9.81257 1.27543 9.94868 1.68377L15 16.8377L17.0513 10.6838C17.1874 10.2754 17.5696 10 18 10H22C22.5523 10 23 10.4477 23 11C23 11.5523 22.5523 12 22 12H18.7208L15.9487 20.3162C15.8126 20.7246 15.4304 21 15 21C14.5696 21 14.1874 20.7246 14.0513 20.3162L9 5.16228L6.94868 11.3162C6.81257 11.7246 6.43043 12 6 12H2C1.44772 12 1 11.5523 1 11C1 10.4477 1.44772 10 2 10H5.27924L8.05132 1.68377C8.18743 1.27543 8.56957 1 9 1Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="View Announcements"
          class="c15"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c16"
            data-blade-component="base-box"
          >
            <div
              class="c17 c18"
              data-blade-component="base-box"
            >
              <div
                class="c19"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M13.7743 0.363035C14.0383 0.159916 14.3547 0.0363566 14.6865 0.00687107C15.0183 -0.0226146 15.3516 0.0431988 15.6473 0.196579C15.9429 0.34996 16.1887 0.584536 16.3557 0.872751L23.8564 13.8644C24.023 14.1531 24.1038 14.4835 24.0891 14.8165C24.0744 15.1494 23.9649 15.4712 23.7736 15.7441C23.5822 16.017 23.3169 16.2295 23.0089 16.3567C22.7012 16.4838 22.3638 16.5205 22.0361 16.4625C19.0399 15.9345 16.4708 16.2347 14.6537 16.6655C13.8958 16.8451 13.2709 17.0471 12.8032 17.2197L14.1451 19.5439C14.2889 19.7933 14.3692 20.0747 14.3784 20.3624C14.3877 20.6501 14.3258 20.9356 14.1983 21.1936L13.6487 22.3047C13.5244 22.556 13.3413 22.7741 13.1153 22.94C12.8891 23.1059 12.6263 23.2151 12.3492 23.2582C12.072 23.3014 11.7885 23.2773 11.5226 23.1879C11.2595 23.0995 11.0212 22.9498 10.8274 22.7513L7.91081 19.8194C6.99128 20.1626 5.98112 20.2147 5.02062 19.9574C3.80377 19.6313 2.76628 18.8352 2.13639 17.7442C1.5065 16.6532 1.33581 15.3567 1.66186 14.1398C1.98792 12.923 2.78401 11.8855 3.87501 11.2556L7.09987 9.39373L7.11694 9.38248C7.14203 9.36576 7.18224 9.33849 7.23602 9.30055C7.34361 9.22464 7.50532 9.10616 7.70879 8.94409C8.11602 8.61974 8.6888 8.12217 9.32936 7.44338C10.6109 6.0853 12.1554 4.01088 13.1965 1.15285C13.31 0.839989 13.5105 0.566004 13.7743 0.363035ZM7.61439 17.7569C7.62235 17.7522 7.63037 17.7475 7.63843 17.7431L10.0066 16.3758L7.25658 11.6127L4.87501 12.9877C4.24338 13.3523 3.78249 13.953 3.59372 14.6575C3.40495 15.362 3.50377 16.1126 3.86844 16.7442C4.23312 17.3759 4.83377 17.8368 5.53826 18.0255C6.23881 18.2132 6.98498 18.1166 7.61439 17.7569ZM8.93679 10.5229C8.94278 10.5181 8.9488 10.5133 8.95484 10.5085C9.4261 10.1331 10.0703 9.57224 10.7839 8.81603C12.1352 7.38416 13.7426 5.24389 14.8885 2.33153L21.8607 14.4077C18.7654 13.9435 16.108 14.2653 14.1923 14.7194C13.1806 14.9593 12.3727 15.2367 11.812 15.4571C11.8048 15.46 11.7976 15.4628 11.7905 15.4656L8.93679 10.5229ZM11.0066 18.1078L9.75058 18.833L12.0108 21.105L12.3459 20.4276L11.0066 18.1078Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c20 c21"
          data-blade-component="avatar"
        >
          <div
            class="c22"
            data-blade-component="base-box"
          >
            <div
              class="c23"
              color="neutral"
            >
              <div
                class="c24"
                data-blade-component="base-box"
              >
                <p
                  class="c25"
                  data-blade-component="text"
                >
                  AH
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopNav should render 1`] = `
.c0.c0.c0.c0.c0 {
  height: 100vh;
  background-color: hsla(0,0%,100%,1);
}

.c1.c1.c1.c1.c1 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  z-index: 100;
  grid-template-columns: auto minmax(0,1fr) auto;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  height: 56px;
  width: 100%;
  top: 0px;
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 12px;
  width: 245px;
}

.c3.c3.c3.c3.c3 {
  text-align: center;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  padding-right: 0px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  position: relative;
  width: 100%;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  gap: 0px;
  left: -1px;
}

.c12.c12.c12.c12.c12 {
  margin: auto;
  height: 16px;
  border-left-color: hsla(211,20%,52%,0.18);
  border-left-style: solid;
}

.c14.c14.c14.c14.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  padding: 8px;
  margin-top: 2px;
  gap: 8px;
  background-color: hsla(210,40%,98%,1);
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c19.c19.c19.c19.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20.c20.c20.c20.c20 {
  background-color: hsla(0,0%,100%,1);
}

.c22.c22.c22.c22.c22 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c24.c24.c24.c24.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c13.c13.c13.c13.c13 {
  border-width: 0;
  border-left-style: solid;
  border-left-width: 1px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 16px;
}

.c25.c25.c25.c25.c25 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  border-radius: 4px;
  border: none;
  background: none;
}

.c11.c11.c11.c11.c11[aria-expanded="true"] {
  background-color: hsla(211,20%,52%,0.12);
}

.c11.c11.c11.c11.c11:hover {
  background-color: hsla(211,20%,52%,0.12);
}

.c9.c9.c9.c9.c9 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 4px 2px;
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  border-bottom-width: 0;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: 280ms cubic-bezier(0.3,0,0.2,1);
  transition: 280ms cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-property: background;
  transition-property: background;
}

.c10.c10.c10.c10.c10 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 2px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: hsla(212,39%,16%,1);
  pointer-events: none;
  opacity: 0;
  -webkit-transition: 280ms cubic-bezier(0.3,0,0.2,1);
  transition: 280ms cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-property: opacity;
  transition-property: opacity;
}

.c21.c21.c21.c21.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c23.c23.c23.c23.c23 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c23.c23.c23.c23.c23 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c15.c15.c15.c15.c15 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.12);
  border-color: hsla(214,28%,84%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c15.c15.c15.c15.c15:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c15.c15.c15.c15.c15:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c15.c15.c15.c15.c15:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c15.c15.c15.c15.c15 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c16.c16.c16.c16.c16 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c18.c18.c18.c18.c18 {
  opacity: 1;
}

@media screen and (min-width:768px) {
  .c1.c1.c1.c1.c1 {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 8px;
    padding-left: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c2.c2.c2.c2.c2 {
    width: 264px;
  }
}

@media screen and (min-width:768px) {
  .c4.c4.c4.c4.c4 {
    padding-right: 80px;
  }
}

@media screen and (min-width:320px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

<div>
  <div
    class="c0"
    data-blade-component="box"
  >
    <div
      class="c1"
      data-analytics-topnav="demo"
      data-blade-component="box"
      data-testid="demo"
    >
      <div
        class="c2"
        data-blade-component="box"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 116 24"
            width="116"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="logo"
            >
              <path
                d="M7.49374 6.48973L6.53128 10.0322L12.0402 6.46956L8.43726 19.9123L12.0964 19.9153L17.419 0.0598755"
                fill="#3395FF"
                id="Vector"
              />
              <path
                d="M1.56438 14.264L0.0488892 19.9153H7.54876L10.6176 8.41895L1.56438 14.264ZM27.6162 9.28853C27.4329 9.96989 27.0797 10.4704 26.5529 10.79C26.0274 11.109 25.2898 11.2691 24.3378 11.2691H21.3129L22.3749 7.30922H25.3998C26.3507 7.30922 27.0039 7.4681 27.3584 7.79198C27.7128 8.11585 27.7983 8.61083 27.6162 9.29525V9.28853ZM30.7481 9.2097C31.133 7.77976 30.9742 6.6798 30.2702 5.90983C29.5674 5.14597 28.3343 4.76099 26.5743 4.76099H19.8237L15.7599 19.9221H19.0396L20.6773 13.8112H22.8284C23.3111 13.8112 23.6912 13.8906 23.9687 14.0434C24.2467 14.2023 24.4099 14.4773 24.46 14.8745L25.0454 19.9221H28.5591L27.9896 15.2167C27.8735 14.1656 27.3926 13.5484 26.5474 13.3651C27.6248 13.0534 28.5274 12.534 29.2546 11.8129C29.9767 11.0971 30.4926 10.2 30.7481 9.21581V9.2097ZM38.7203 14.4956C38.4453 15.5222 38.0237 16.2983 37.4535 16.8422C36.8828 17.386 36.2008 17.6549 35.4052 17.6549C34.5949 17.6549 34.0455 17.3922 33.7552 16.8605C33.4643 16.3289 33.4546 15.5589 33.7247 14.5506C33.9948 13.5423 34.4256 12.754 35.0183 12.1857C35.6111 11.6174 36.3041 11.3332 37.0997 11.3332C37.8941 11.3332 38.438 11.6082 38.713 12.1539C38.9941 12.7021 39.0002 13.4861 38.7252 14.5066L38.7203 14.4956ZM40.1576 9.13026L39.7469 10.6641C39.5697 10.1141 39.2257 9.67412 38.7172 9.34414C38.2076 9.02026 37.577 8.85527 36.8247 8.85527C35.902 8.85527 35.0159 9.09359 34.1665 9.57024C33.3171 10.0469 32.5715 10.7191 31.936 11.5868C31.3005 12.4546 30.8361 13.4384 30.5366 14.5445C30.2433 15.6567 30.1822 16.6283 30.3594 17.4716C30.5427 18.321 30.9277 18.9688 31.5205 19.421C32.1193 19.8793 32.8832 20.1054 33.8182 20.1054C34.5611 20.1091 35.2957 19.9485 35.9692 19.6348C36.6351 19.3345 37.2274 18.8924 37.7047 18.3393L37.2769 19.9379H40.4485L43.3444 9.13576H40.1667L40.1576 9.13026ZM54.7412 9.13026H45.518L44.8733 11.5379H50.2399L43.1452 17.6671L42.539 19.9282H52.0597L52.7044 17.5205H46.9541L54.1576 11.2996L54.7412 9.13026ZM62.8595 14.4773C62.5741 15.5406 62.1506 16.3399 61.5914 16.8605C61.0323 17.386 60.3552 17.6488 59.5602 17.6488C57.898 17.6488 57.3517 16.5916 57.9188 14.4773C58.1999 13.4262 58.6252 12.6361 59.1935 12.1038C59.7619 11.5697 60.4505 11.3033 61.2602 11.3033C62.0546 11.3033 62.5912 11.5679 62.8674 12.1007C63.1436 12.6324 63.1412 13.425 62.8595 14.476V14.4773ZM64.7159 9.53663C63.9857 9.08198 63.0538 8.85466 61.9172 8.85466C60.7665 8.85466 59.7014 9.08076 58.7212 9.53296C57.7451 9.98234 56.8872 10.6531 56.2157 11.4921C55.5252 12.3415 55.0284 13.3376 54.7234 14.4742C54.424 15.6066 54.3873 16.6008 54.6196 17.452C54.8518 18.3014 55.3406 18.9553 56.0739 19.4075C56.8134 19.8634 57.7544 20.0901 58.9094 20.0901C60.046 20.0901 61.1032 19.8616 62.0748 19.4069C63.0464 18.9498 63.8775 18.3008 64.568 17.4453C65.2586 16.5935 65.7536 15.5998 66.0591 14.4632C66.3646 13.3266 66.4013 12.3342 66.1691 11.4811C65.9369 10.6317 65.4541 9.97783 64.7269 9.52257L64.7159 9.53663ZM76.0382 12.0158L76.8509 9.07648C76.5759 8.93593 76.2154 8.8626 75.7632 8.8626C75.036 8.8626 74.3393 9.04226 73.6671 9.40647C73.089 9.71568 72.5977 10.152 72.1822 10.6983L72.6038 9.11559L71.6829 9.11926H69.4219L66.507 19.9172H69.7232L71.2356 14.2726C71.4556 13.4519 71.8516 12.8059 72.423 12.3476C72.9913 11.8875 73.7001 11.6571 74.5557 11.6571C75.0812 11.6571 75.5701 11.7775 76.0345 12.0176L76.0382 12.0158ZM84.9869 14.5292C84.7119 15.5375 84.2964 16.3075 83.7281 16.8391C83.1598 17.3732 82.4753 17.6396 81.6809 17.6396C80.8865 17.6396 80.3426 17.3708 80.0554 16.833C79.7621 16.2922 79.756 15.5131 80.031 14.4889C80.306 13.4653 80.7276 12.6801 81.3082 12.1362C81.8887 11.588 82.5731 11.3143 83.3675 11.3143C84.1497 11.3143 84.6752 11.5954 84.9564 12.1637C85.2374 12.732 85.2436 13.5203 84.9735 14.5286L84.9869 14.5292ZM87.2223 9.55435C86.6264 9.0777 85.8656 8.83938 84.9429 8.83938C84.1344 8.83938 83.3639 9.02271 82.633 9.39302C81.9027 9.76273 81.31 10.2669 80.8547 10.9049L80.8657 10.8315L81.4053 9.11437H78.2643L77.4638 12.1026L77.4394 12.2065L74.1395 24.5162H77.3599L79.0221 18.3198C79.1871 18.871 79.5232 19.3036 80.0365 19.6165C80.5498 19.9282 81.1835 20.0828 81.937 20.0828C82.8719 20.0828 83.7641 19.8567 84.6105 19.4045C85.4599 18.951 86.1932 18.2984 86.8165 17.4551C87.4398 16.6118 87.9024 15.6341 88.1976 14.528C88.497 13.4201 88.5581 12.432 88.387 11.5673C88.2128 10.7014 87.8272 10.031 87.232 9.5568L87.2223 9.55435ZM97.9047 14.4852C97.6297 15.5057 97.208 16.2879 96.6397 16.8257C96.0714 17.3671 95.387 17.6366 94.5926 17.6366C93.7798 17.6366 93.2299 17.3738 92.9426 16.8422C92.6493 16.3105 92.6432 15.5406 92.9121 14.5323C93.181 13.524 93.61 12.7357 94.2027 12.1674C94.7955 11.599 95.489 11.3155 96.2847 11.3155C97.0791 11.3155 97.6169 11.5905 97.8979 12.1344C98.179 12.6801 98.1809 13.4641 97.9071 14.487L97.9047 14.4852ZM99.3407 9.11681L98.9295 10.6506C98.7523 10.0976 98.41 9.65763 97.9028 9.33069C97.3895 9.00437 96.7601 8.84182 96.0085 8.84182C95.0857 8.84182 94.1948 9.08015 93.3441 9.5568C92.4947 10.0334 91.7492 10.702 91.1137 11.5673C90.4781 12.4326 90.0137 13.4189 89.7143 14.5249C89.4179 15.6353 89.3598 16.6087 89.5371 17.4557C89.7161 18.299 90.1017 18.9504 90.6981 19.4051C91.2933 19.8573 92.0609 20.0858 92.9958 20.0858C93.7475 20.0858 94.4655 19.9294 95.1468 19.6153C95.8112 19.3135 96.4019 18.8709 96.878 18.3179L96.4503 19.9178H99.6218L102.517 9.11987H99.3456L99.3407 9.11681ZM115.832 9.12048L115.834 9.11742H113.885C113.822 9.11742 113.767 9.12048 113.71 9.1217H112.699L112.18 9.84278L112.051 10.0139L111.996 10.0994L107.887 15.8241L107.037 9.12048H103.671L105.376 19.3073L101.612 24.5199H104.967L105.878 23.2286C105.903 23.1908 105.926 23.159 105.957 23.1186L107.02 21.6093L107.051 21.5665L111.813 14.814L115.828 9.13087L115.834 9.1272H115.832V9.12048Z"
                fill="#192839"
                id="Vector_2"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="c4"
        data-blade-component="top-nav-content"
      >
        <nav
          class="c5"
          data-blade-component="tab-nav"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c7"
              data-blade-component="base-box"
            >
              <div
                class="c8"
                data-blade-component="box"
              >
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Home"
                    href="/home"
                    to="/home"
                  >
                    Home
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Payroll"
                    href="/payroll"
                    to="/payroll"
                  >
                    Payroll
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Payments"
                    href="/payments"
                    to="/payments"
                  >
                    Payments
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Magic Checkout"
                    href="/magic-checkout"
                    to="/magic-checkout"
                  >
                    Magic Checkout
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
              </div>
              <div
                class=" c9"
                data-blade-component="tab-nav-item"
              >
                <div
                  class=" c10"
                  data-blade-component="base-box"
                />
                <a
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="c11"
                  href="#"
                  id=":r2:"
                  to="#"
                >
                  More
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="16px"
                    viewBox="0 0 24 24"
                    width="16px"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                      data-blade-component="svg-path"
                      fill="hsla(212, 39%, 16%, 1)"
                      fill-rule="evenodd"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="c14"
        data-blade-component="top-nav-actions"
      >
        <button
          aria-label="View Ecosystem Health"
          class="c15"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c16"
            data-blade-component="base-box"
          >
            <div
              class="c17 c18"
              data-blade-component="base-box"
            >
              <div
                class="c19"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 1C9.43043 1 9.81257 1.27543 9.94868 1.68377L15 16.8377L17.0513 10.6838C17.1874 10.2754 17.5696 10 18 10H22C22.5523 10 23 10.4477 23 11C23 11.5523 22.5523 12 22 12H18.7208L15.9487 20.3162C15.8126 20.7246 15.4304 21 15 21C14.5696 21 14.1874 20.7246 14.0513 20.3162L9 5.16228L6.94868 11.3162C6.81257 11.7246 6.43043 12 6 12H2C1.44772 12 1 11.5523 1 11C1 10.4477 1.44772 10 2 10H5.27924L8.05132 1.68377C8.18743 1.27543 8.56957 1 9 1Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="View Announcements"
          class="c15"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c16"
            data-blade-component="base-box"
          >
            <div
              class="c17 c18"
              data-blade-component="base-box"
            >
              <div
                class="c19"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M13.7743 0.363035C14.0383 0.159916 14.3547 0.0363566 14.6865 0.00687107C15.0183 -0.0226146 15.3516 0.0431988 15.6473 0.196579C15.9429 0.34996 16.1887 0.584536 16.3557 0.872751L23.8564 13.8644C24.023 14.1531 24.1038 14.4835 24.0891 14.8165C24.0744 15.1494 23.9649 15.4712 23.7736 15.7441C23.5822 16.017 23.3169 16.2295 23.0089 16.3567C22.7012 16.4838 22.3638 16.5205 22.0361 16.4625C19.0399 15.9345 16.4708 16.2347 14.6537 16.6655C13.8958 16.8451 13.2709 17.0471 12.8032 17.2197L14.1451 19.5439C14.2889 19.7933 14.3692 20.0747 14.3784 20.3624C14.3877 20.6501 14.3258 20.9356 14.1983 21.1936L13.6487 22.3047C13.5244 22.556 13.3413 22.7741 13.1153 22.94C12.8891 23.1059 12.6263 23.2151 12.3492 23.2582C12.072 23.3014 11.7885 23.2773 11.5226 23.1879C11.2595 23.0995 11.0212 22.9498 10.8274 22.7513L7.91081 19.8194C6.99128 20.1626 5.98112 20.2147 5.02062 19.9574C3.80377 19.6313 2.76628 18.8352 2.13639 17.7442C1.5065 16.6532 1.33581 15.3567 1.66186 14.1398C1.98792 12.923 2.78401 11.8855 3.87501 11.2556L7.09987 9.39373L7.11694 9.38248C7.14203 9.36576 7.18224 9.33849 7.23602 9.30055C7.34361 9.22464 7.50532 9.10616 7.70879 8.94409C8.11602 8.61974 8.6888 8.12217 9.32936 7.44338C10.6109 6.0853 12.1554 4.01088 13.1965 1.15285C13.31 0.839989 13.5105 0.566004 13.7743 0.363035ZM7.61439 17.7569C7.62235 17.7522 7.63037 17.7475 7.63843 17.7431L10.0066 16.3758L7.25658 11.6127L4.87501 12.9877C4.24338 13.3523 3.78249 13.953 3.59372 14.6575C3.40495 15.362 3.50377 16.1126 3.86844 16.7442C4.23312 17.3759 4.83377 17.8368 5.53826 18.0255C6.23881 18.2132 6.98498 18.1166 7.61439 17.7569ZM8.93679 10.5229C8.94278 10.5181 8.9488 10.5133 8.95484 10.5085C9.4261 10.1331 10.0703 9.57224 10.7839 8.81603C12.1352 7.38416 13.7426 5.24389 14.8885 2.33153L21.8607 14.4077C18.7654 13.9435 16.108 14.2653 14.1923 14.7194C13.1806 14.9593 12.3727 15.2367 11.812 15.4571C11.8048 15.46 11.7976 15.4628 11.7905 15.4656L8.93679 10.5229ZM11.0066 18.1078L9.75058 18.833L12.0108 21.105L12.3459 20.4276L11.0066 18.1078Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c20 c21"
          data-blade-component="avatar"
        >
          <div
            class="c22"
            data-blade-component="base-box"
          >
            <div
              class="c23"
              color="neutral"
            >
              <div
                class="c24"
                data-blade-component="base-box"
              >
                <p
                  class="c25"
                  data-blade-component="text"
                >
                  AH
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopNav should support data analytics attributes 1`] = `
.c0.c0.c0.c0.c0 {
  height: 100vh;
  background-color: hsla(0,0%,100%,1);
}

.c1.c1.c1.c1.c1 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  z-index: 100;
  grid-template-columns: auto minmax(0,1fr) auto;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  height: 56px;
  width: 100%;
  top: 0px;
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 12px;
  width: 245px;
}

.c3.c3.c3.c3.c3 {
  text-align: center;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  padding-right: 0px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  position: relative;
  width: 100%;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  gap: 0px;
  left: -1px;
}

.c12.c12.c12.c12.c12 {
  margin: auto;
  height: 16px;
  border-left-color: hsla(211,20%,52%,0.18);
  border-left-style: solid;
}

.c14.c14.c14.c14.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  padding: 8px;
  margin-top: 2px;
  gap: 8px;
  background-color: hsla(210,40%,98%,1);
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c19.c19.c19.c19.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20.c20.c20.c20.c20 {
  background-color: hsla(0,0%,100%,1);
}

.c22.c22.c22.c22.c22 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c24.c24.c24.c24.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c13.c13.c13.c13.c13 {
  border-width: 0;
  border-left-style: solid;
  border-left-width: 1px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 16px;
}

.c25.c25.c25.c25.c25 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  border-radius: 4px;
  border: none;
  background: none;
}

.c11.c11.c11.c11.c11[aria-expanded="true"] {
  background-color: hsla(211,20%,52%,0.12);
}

.c11.c11.c11.c11.c11:hover {
  background-color: hsla(211,20%,52%,0.12);
}

.c9.c9.c9.c9.c9 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 4px 2px;
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  border-bottom-width: 0;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: 280ms cubic-bezier(0.3,0,0.2,1);
  transition: 280ms cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-property: background;
  transition-property: background;
}

.c10.c10.c10.c10.c10 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 2px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: hsla(212,39%,16%,1);
  pointer-events: none;
  opacity: 0;
  -webkit-transition: 280ms cubic-bezier(0.3,0,0.2,1);
  transition: 280ms cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-property: opacity;
  transition-property: opacity;
}

.c21.c21.c21.c21.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c23.c23.c23.c23.c23 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c23.c23.c23.c23.c23 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c15.c15.c15.c15.c15 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.12);
  border-color: hsla(214,28%,84%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c15.c15.c15.c15.c15:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c15.c15.c15.c15.c15:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c15.c15.c15.c15.c15:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c15.c15.c15.c15.c15 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c16.c16.c16.c16.c16 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c18.c18.c18.c18.c18 {
  opacity: 1;
}

@media screen and (min-width:768px) {
  .c1.c1.c1.c1.c1 {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 8px;
    padding-left: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c2.c2.c2.c2.c2 {
    width: 264px;
  }
}

@media screen and (min-width:768px) {
  .c4.c4.c4.c4.c4 {
    padding-right: 80px;
  }
}

@media screen and (min-width:320px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c12.c12.c12.c12.c12 {
    border-left-style: solid;
  }
}

<div>
  <div
    class="c0"
    data-blade-component="box"
  >
    <div
      class="c1"
      data-analytics-topnav="demo"
      data-blade-component="box"
      data-testid="demo"
    >
      <div
        class="c2"
        data-blade-component="box"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 116 24"
            width="116"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="logo"
            >
              <path
                d="M7.49374 6.48973L6.53128 10.0322L12.0402 6.46956L8.43726 19.9123L12.0964 19.9153L17.419 0.0598755"
                fill="#3395FF"
                id="Vector"
              />
              <path
                d="M1.56438 14.264L0.0488892 19.9153H7.54876L10.6176 8.41895L1.56438 14.264ZM27.6162 9.28853C27.4329 9.96989 27.0797 10.4704 26.5529 10.79C26.0274 11.109 25.2898 11.2691 24.3378 11.2691H21.3129L22.3749 7.30922H25.3998C26.3507 7.30922 27.0039 7.4681 27.3584 7.79198C27.7128 8.11585 27.7983 8.61083 27.6162 9.29525V9.28853ZM30.7481 9.2097C31.133 7.77976 30.9742 6.6798 30.2702 5.90983C29.5674 5.14597 28.3343 4.76099 26.5743 4.76099H19.8237L15.7599 19.9221H19.0396L20.6773 13.8112H22.8284C23.3111 13.8112 23.6912 13.8906 23.9687 14.0434C24.2467 14.2023 24.4099 14.4773 24.46 14.8745L25.0454 19.9221H28.5591L27.9896 15.2167C27.8735 14.1656 27.3926 13.5484 26.5474 13.3651C27.6248 13.0534 28.5274 12.534 29.2546 11.8129C29.9767 11.0971 30.4926 10.2 30.7481 9.21581V9.2097ZM38.7203 14.4956C38.4453 15.5222 38.0237 16.2983 37.4535 16.8422C36.8828 17.386 36.2008 17.6549 35.4052 17.6549C34.5949 17.6549 34.0455 17.3922 33.7552 16.8605C33.4643 16.3289 33.4546 15.5589 33.7247 14.5506C33.9948 13.5423 34.4256 12.754 35.0183 12.1857C35.6111 11.6174 36.3041 11.3332 37.0997 11.3332C37.8941 11.3332 38.438 11.6082 38.713 12.1539C38.9941 12.7021 39.0002 13.4861 38.7252 14.5066L38.7203 14.4956ZM40.1576 9.13026L39.7469 10.6641C39.5697 10.1141 39.2257 9.67412 38.7172 9.34414C38.2076 9.02026 37.577 8.85527 36.8247 8.85527C35.902 8.85527 35.0159 9.09359 34.1665 9.57024C33.3171 10.0469 32.5715 10.7191 31.936 11.5868C31.3005 12.4546 30.8361 13.4384 30.5366 14.5445C30.2433 15.6567 30.1822 16.6283 30.3594 17.4716C30.5427 18.321 30.9277 18.9688 31.5205 19.421C32.1193 19.8793 32.8832 20.1054 33.8182 20.1054C34.5611 20.1091 35.2957 19.9485 35.9692 19.6348C36.6351 19.3345 37.2274 18.8924 37.7047 18.3393L37.2769 19.9379H40.4485L43.3444 9.13576H40.1667L40.1576 9.13026ZM54.7412 9.13026H45.518L44.8733 11.5379H50.2399L43.1452 17.6671L42.539 19.9282H52.0597L52.7044 17.5205H46.9541L54.1576 11.2996L54.7412 9.13026ZM62.8595 14.4773C62.5741 15.5406 62.1506 16.3399 61.5914 16.8605C61.0323 17.386 60.3552 17.6488 59.5602 17.6488C57.898 17.6488 57.3517 16.5916 57.9188 14.4773C58.1999 13.4262 58.6252 12.6361 59.1935 12.1038C59.7619 11.5697 60.4505 11.3033 61.2602 11.3033C62.0546 11.3033 62.5912 11.5679 62.8674 12.1007C63.1436 12.6324 63.1412 13.425 62.8595 14.476V14.4773ZM64.7159 9.53663C63.9857 9.08198 63.0538 8.85466 61.9172 8.85466C60.7665 8.85466 59.7014 9.08076 58.7212 9.53296C57.7451 9.98234 56.8872 10.6531 56.2157 11.4921C55.5252 12.3415 55.0284 13.3376 54.7234 14.4742C54.424 15.6066 54.3873 16.6008 54.6196 17.452C54.8518 18.3014 55.3406 18.9553 56.0739 19.4075C56.8134 19.8634 57.7544 20.0901 58.9094 20.0901C60.046 20.0901 61.1032 19.8616 62.0748 19.4069C63.0464 18.9498 63.8775 18.3008 64.568 17.4453C65.2586 16.5935 65.7536 15.5998 66.0591 14.4632C66.3646 13.3266 66.4013 12.3342 66.1691 11.4811C65.9369 10.6317 65.4541 9.97783 64.7269 9.52257L64.7159 9.53663ZM76.0382 12.0158L76.8509 9.07648C76.5759 8.93593 76.2154 8.8626 75.7632 8.8626C75.036 8.8626 74.3393 9.04226 73.6671 9.40647C73.089 9.71568 72.5977 10.152 72.1822 10.6983L72.6038 9.11559L71.6829 9.11926H69.4219L66.507 19.9172H69.7232L71.2356 14.2726C71.4556 13.4519 71.8516 12.8059 72.423 12.3476C72.9913 11.8875 73.7001 11.6571 74.5557 11.6571C75.0812 11.6571 75.5701 11.7775 76.0345 12.0176L76.0382 12.0158ZM84.9869 14.5292C84.7119 15.5375 84.2964 16.3075 83.7281 16.8391C83.1598 17.3732 82.4753 17.6396 81.6809 17.6396C80.8865 17.6396 80.3426 17.3708 80.0554 16.833C79.7621 16.2922 79.756 15.5131 80.031 14.4889C80.306 13.4653 80.7276 12.6801 81.3082 12.1362C81.8887 11.588 82.5731 11.3143 83.3675 11.3143C84.1497 11.3143 84.6752 11.5954 84.9564 12.1637C85.2374 12.732 85.2436 13.5203 84.9735 14.5286L84.9869 14.5292ZM87.2223 9.55435C86.6264 9.0777 85.8656 8.83938 84.9429 8.83938C84.1344 8.83938 83.3639 9.02271 82.633 9.39302C81.9027 9.76273 81.31 10.2669 80.8547 10.9049L80.8657 10.8315L81.4053 9.11437H78.2643L77.4638 12.1026L77.4394 12.2065L74.1395 24.5162H77.3599L79.0221 18.3198C79.1871 18.871 79.5232 19.3036 80.0365 19.6165C80.5498 19.9282 81.1835 20.0828 81.937 20.0828C82.8719 20.0828 83.7641 19.8567 84.6105 19.4045C85.4599 18.951 86.1932 18.2984 86.8165 17.4551C87.4398 16.6118 87.9024 15.6341 88.1976 14.528C88.497 13.4201 88.5581 12.432 88.387 11.5673C88.2128 10.7014 87.8272 10.031 87.232 9.5568L87.2223 9.55435ZM97.9047 14.4852C97.6297 15.5057 97.208 16.2879 96.6397 16.8257C96.0714 17.3671 95.387 17.6366 94.5926 17.6366C93.7798 17.6366 93.2299 17.3738 92.9426 16.8422C92.6493 16.3105 92.6432 15.5406 92.9121 14.5323C93.181 13.524 93.61 12.7357 94.2027 12.1674C94.7955 11.599 95.489 11.3155 96.2847 11.3155C97.0791 11.3155 97.6169 11.5905 97.8979 12.1344C98.179 12.6801 98.1809 13.4641 97.9071 14.487L97.9047 14.4852ZM99.3407 9.11681L98.9295 10.6506C98.7523 10.0976 98.41 9.65763 97.9028 9.33069C97.3895 9.00437 96.7601 8.84182 96.0085 8.84182C95.0857 8.84182 94.1948 9.08015 93.3441 9.5568C92.4947 10.0334 91.7492 10.702 91.1137 11.5673C90.4781 12.4326 90.0137 13.4189 89.7143 14.5249C89.4179 15.6353 89.3598 16.6087 89.5371 17.4557C89.7161 18.299 90.1017 18.9504 90.6981 19.4051C91.2933 19.8573 92.0609 20.0858 92.9958 20.0858C93.7475 20.0858 94.4655 19.9294 95.1468 19.6153C95.8112 19.3135 96.4019 18.8709 96.878 18.3179L96.4503 19.9178H99.6218L102.517 9.11987H99.3456L99.3407 9.11681ZM115.832 9.12048L115.834 9.11742H113.885C113.822 9.11742 113.767 9.12048 113.71 9.1217H112.699L112.18 9.84278L112.051 10.0139L111.996 10.0994L107.887 15.8241L107.037 9.12048H103.671L105.376 19.3073L101.612 24.5199H104.967L105.878 23.2286C105.903 23.1908 105.926 23.159 105.957 23.1186L107.02 21.6093L107.051 21.5665L111.813 14.814L115.828 9.13087L115.834 9.1272H115.832V9.12048Z"
                fill="#192839"
                id="Vector_2"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="c4"
        data-blade-component="top-nav-content"
      >
        <nav
          class="c5"
          data-blade-component="tab-nav"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c7"
              data-blade-component="base-box"
            >
              <div
                class="c8"
                data-blade-component="box"
              >
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Home"
                    href="/home"
                    to="/home"
                  >
                    Home
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Payroll"
                    href="/payroll"
                    to="/payroll"
                  >
                    Payroll
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Payments"
                    href="/payments"
                    to="/payments"
                  >
                    Payments
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
                <div
                  class=" c9"
                  data-blade-component="tab-nav-item"
                >
                  <div
                    class=" c10"
                    data-blade-component="base-box"
                  />
                  <a
                    class="c11"
                    data-analytics-tabnavitem="Magic Checkout"
                    href="/magic-checkout"
                    to="/magic-checkout"
                  >
                    Magic Checkout
                  </a>
                </div>
                <div
                  class="c12 c13"
                  data-blade-component="divider"
                  role="separator"
                />
              </div>
              <div
                class=" c9"
                data-blade-component="tab-nav-item"
              >
                <div
                  class=" c10"
                  data-blade-component="base-box"
                />
                <a
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="c11"
                  href="#"
                  id=":rg:"
                  to="#"
                >
                  More
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="16px"
                    viewBox="0 0 24 24"
                    width="16px"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                      data-blade-component="svg-path"
                      fill="hsla(212, 39%, 16%, 1)"
                      fill-rule="evenodd"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="c14"
        data-blade-component="top-nav-actions"
      >
        <button
          aria-label="View Ecosystem Health"
          class="c15"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c16"
            data-blade-component="base-box"
          >
            <div
              class="c17 c18"
              data-blade-component="base-box"
            >
              <div
                class="c19"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 1C9.43043 1 9.81257 1.27543 9.94868 1.68377L15 16.8377L17.0513 10.6838C17.1874 10.2754 17.5696 10 18 10H22C22.5523 10 23 10.4477 23 11C23 11.5523 22.5523 12 22 12H18.7208L15.9487 20.3162C15.8126 20.7246 15.4304 21 15 21C14.5696 21 14.1874 20.7246 14.0513 20.3162L9 5.16228L6.94868 11.3162C6.81257 11.7246 6.43043 12 6 12H2C1.44772 12 1 11.5523 1 11C1 10.4477 1.44772 10 2 10H5.27924L8.05132 1.68377C8.18743 1.27543 8.56957 1 9 1Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="View Announcements"
          class="c15"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c16"
            data-blade-component="base-box"
          >
            <div
              class="c17 c18"
              data-blade-component="base-box"
            >
              <div
                class="c19"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M13.7743 0.363035C14.0383 0.159916 14.3547 0.0363566 14.6865 0.00687107C15.0183 -0.0226146 15.3516 0.0431988 15.6473 0.196579C15.9429 0.34996 16.1887 0.584536 16.3557 0.872751L23.8564 13.8644C24.023 14.1531 24.1038 14.4835 24.0891 14.8165C24.0744 15.1494 23.9649 15.4712 23.7736 15.7441C23.5822 16.017 23.3169 16.2295 23.0089 16.3567C22.7012 16.4838 22.3638 16.5205 22.0361 16.4625C19.0399 15.9345 16.4708 16.2347 14.6537 16.6655C13.8958 16.8451 13.2709 17.0471 12.8032 17.2197L14.1451 19.5439C14.2889 19.7933 14.3692 20.0747 14.3784 20.3624C14.3877 20.6501 14.3258 20.9356 14.1983 21.1936L13.6487 22.3047C13.5244 22.556 13.3413 22.7741 13.1153 22.94C12.8891 23.1059 12.6263 23.2151 12.3492 23.2582C12.072 23.3014 11.7885 23.2773 11.5226 23.1879C11.2595 23.0995 11.0212 22.9498 10.8274 22.7513L7.91081 19.8194C6.99128 20.1626 5.98112 20.2147 5.02062 19.9574C3.80377 19.6313 2.76628 18.8352 2.13639 17.7442C1.5065 16.6532 1.33581 15.3567 1.66186 14.1398C1.98792 12.923 2.78401 11.8855 3.87501 11.2556L7.09987 9.39373L7.11694 9.38248C7.14203 9.36576 7.18224 9.33849 7.23602 9.30055C7.34361 9.22464 7.50532 9.10616 7.70879 8.94409C8.11602 8.61974 8.6888 8.12217 9.32936 7.44338C10.6109 6.0853 12.1554 4.01088 13.1965 1.15285C13.31 0.839989 13.5105 0.566004 13.7743 0.363035ZM7.61439 17.7569C7.62235 17.7522 7.63037 17.7475 7.63843 17.7431L10.0066 16.3758L7.25658 11.6127L4.87501 12.9877C4.24338 13.3523 3.78249 13.953 3.59372 14.6575C3.40495 15.362 3.50377 16.1126 3.86844 16.7442C4.23312 17.3759 4.83377 17.8368 5.53826 18.0255C6.23881 18.2132 6.98498 18.1166 7.61439 17.7569ZM8.93679 10.5229C8.94278 10.5181 8.9488 10.5133 8.95484 10.5085C9.4261 10.1331 10.0703 9.57224 10.7839 8.81603C12.1352 7.38416 13.7426 5.24389 14.8885 2.33153L21.8607 14.4077C18.7654 13.9435 16.108 14.2653 14.1923 14.7194C13.1806 14.9593 12.3727 15.2367 11.812 15.4571C11.8048 15.46 11.7976 15.4628 11.7905 15.4656L8.93679 10.5229ZM11.0066 18.1078L9.75058 18.833L12.0108 21.105L12.3459 20.4276L11.0066 18.1078Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c20 c21"
          data-blade-component="avatar"
        >
          <div
            class="c22"
            data-blade-component="base-box"
          >
            <div
              class="c23"
              color="neutral"
            >
              <div
                class="c24"
                data-blade-component="base-box"
              >
                <p
                  class="c25"
                  data-blade-component="text"
                >
                  AH
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
